toolchain/parse/src/snapshots/knot_parse__component__tests__text_in_element.snap
---
source: toolchain/parse/src/component.rs
expression: ast
---
Component(
    Node(
        OpenElement {
            start_tag: "foo",
            attributes: [],
            children: [
                Component(
                    Node(
                        Text(
                            "bar",
                        ),
                        Range(
                            Point(
                                1,
                                6,
                            ),
                            Point(
                                1,
                                8,
                            ),
                        ),
                        (),
                    ),
                ),
            ],
            end_tag: "foo",
        },
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                14,
            ),
        ),
        (),
    ),
)
