toolchain/parse/src/snapshots/knot_parse__component__tests__trim_end_text.snap
---
source: toolchain/parse/src/component.rs
expression: ast
---
Component(
    Node(
        OpenElement {
            start_tag: "foo",
            attributes: [],
            children: [
                Component(
                    Node(
                        Expression(
                            Expression(
                                Node(
                                    Identifier(
                                        "fizz",
                                    ),
                                    Range(
                                        Point(
                                            2,
                                            2,
                                        ),
                                        Point(
                                            2,
                                            5,
                                        ),
                                    ),
                                    (),
                                ),
                            ),
                        ),
                        Range(
                            Point(
                                2,
                                1,
                            ),
                            Point(
                                2,
                                6,
                            ),
                        ),
                        (),
                    ),
                ),
                Component(
                    Node(
                        Text(
                            "  bar",
                        ),
                        Range(
                            Point(
                                2,
                                7,
                            ),
                            Point(
                                4,
                                2,
                            ),
                        ),
                        (),
                    ),
                ),
            ],
            end_tag: "foo",
        },
        Range(
            Point(
                1,
                1,
            ),
            Point(
                4,
                8,
            ),
        ),
        (),
    ),
)
