toolchain/parse/src/snapshots/knot_parse__component__tests__trim_text.snap
---
source: toolchain/parse/src/component.rs
expression: ast
---
Component(
    Node(
        OpenElement {
            start_tag: "foo",
            attributes: [],
            children: [
                Component(
                    Node(
                        Text(
                            "bar",
                        ),
                        Range(
                            Point(
                                1,
                                6,
                            ),
                            Point(
                                5,
                                2,
                            ),
                        ),
                        (),
                    ),
                ),
            ],
            end_tag: "foo",
        },
        Range(
            Point(
                1,
                1,
            ),
            Point(
                5,
                8,
            ),
        ),
        (),
    ),
)
